# UniKP

./: .gitignore  extra_requirements.txt  infer_Kcats.py  main.py  main_run_file.py  pretrain_trfm.py  pyproject.toml  requirements.txt
