[project]
name = "unikp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.0",
    "numpy==1.24.1",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.0.3",
    "pillow==10.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "rdkit==2024.3.5",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==0.24.2",
    "scipy==1.10.1",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tokenizers==0.20.3",
#    "torch==2.4.1+cpu",
#    "torchvision==0.19.1+cpu",
#    "torchaudio==2.4.1+cpu",
    "tqdm==4.67.1",
    "transformers==4.46.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.2.3",
]
